r173 (10. 08. 2023):
Fixed an issue with "Fool Me Once, Shame on -Shame on You. Fool Me - You Can't Get Fooled Again" achievement tracker

r172 (05. 08. 2023):
Loot Tracker: Fixed an issue where the tracker would hide even there is random loot on the map
Hotline Miami Day 1: Fixed an issue where the black sedan sometimes did not spawn any loot and it wasn't reflected in the Loot Counter
Hotline Miami Day 2: Fixed a crash

r171 (04. 08. 2023):
Ukrainian Prisoner: Fixed a crash
The Bomb: Forest: Added achievement tracker for "Oppressor"

r170 (01. 08. 2023):
Hoxton Breakout Day 2: Fixed crash when Hoxton started hacking

r169 (31. 07. 2023):
Fixed a very rare and possible crash when a convert died or was deleted by the mission script
Buluc's Mansion: Fixed a crash
Slaughterhouse: Fixed a crash

r168 (30. 07. 2023):
Added Trigger Happy and Desperado buffs
Added "Show Scripted Snipers" option
Fixed an issue where achievement loot counters do not properly sync secured loot
Improved memory consumption by deferring loading of TimerGui, DigitalGui and SecurityLockGui trackers until they are needed
Gage Tracker: Fixed an issue where the tracker could get stuck on the screen after sync
Cook Off: Fixed an issue where achievement tracker for "I Am the One Who Knocks" is visible
Cook Off: Fixed an issue where Total XP Tracker is not visible
The Bomb: Forest: Fixed an issue where "Assault Delay" is not visible on client

r167 (15. 07. 2023):
Added option "Show Achievement Description"
To prevent crashes, mod will disable itself while in editor mode
Total XP Tracker: Tracker will stop showing XP when you reached your XP limit
Firestarter Day 2: Fixed an issue where Loot Counter is not visible
Henry's Rock: Fixed an issue where additional artifact in Archaeology room is not counted 
San Martín Bank: Fixed a visual issue where achievement "Gunpowder Glory" failed after alarm and you entered the bank

r166 (09. 07. 2023):
Updated Zipline icons